--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" href="/src/assets/images/my-website-logo.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Students Payments App</title>
   <link rel="stylesheet" type="text/css" href="/loader.css" />
@@ -12,7 +12,7 @@
   <div id="app">
     <div id="loading-bg">
       <div class="loading-logo">
-        <img src="./src/assets/images/secure-payment-svgrepo-com.png" style="transform: translateX(15px);" width="100" alt="">
+        <img src="./src/assets/images/my-website-logo.png"  width="100" alt="">
 
       </div>
       <div class=" loading">
