--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/src/assets/images/my-website-logo.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Students Payments App</title>
+  <title>Application de Gestion Des Paiements Des Etudiants</title>
   <link rel="stylesheet" type="text/css" href="/loader.css" />
 </head>
 
